--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 .navbar {
-  background-color: rgb(0, 0, 0);
+  background-color: rgba(18, 58, 0, 0.8);
 }
 /* text in navbar*/
 .navbar .navbar-item {
@@ -141,10 +141,13 @@ body {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #123a00;
+  background-color: rgba(18, 58, 0, 0.8);
   color: white;
   text-align: center;
   padding: 10px 0;
+  height: 1.5em; /* height of one line of text */
+  /* or */
+  height: 3em; /* height of two lines of text */
 }
 
 .content {
@@ -159,6 +162,5 @@ body {
   align-items: center;
   justify-content: center;
   gap: 10px;
-  padding: 0px 0px; /* vertical padding 10px, horizontal padding 20px */
+  padding: 0px 0px;
 }
-
